<resources>
    <string name="app_name">GameRecommender</string>
    <string name="copyright">© GDipSA57 - Team 7</string>

    <!--    signInPage    -->
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>

    <!--    registrationPage    -->
    <string name="create">Create Account</string>
    <string name="displayName">Display name</string>
    <string name="reEnter">Re-enter password</string>
    <string name="createAccount">Create</string>
    <string name="alreadyUser">Already an user? Sign in</string>

    <!--    prefPage    -->
    <string name="welcome">Welcome User! Select your favourite genres</string>
    <string name="description">We use your favorite genres to make better games
        recommendations and tailor what you see in your feed.</string>
    <string name="con">Continue</string>

    <!--    homePage     -->
    <string name="top">Top Games</string>
    <string name="trend">Trending Games</string>
    <string name="recommend">Games Recommendation</string>

    <!--    gameDetailPage     -->
    <string name="sell">Top Sellers</string>
    <string name="GameList">Game List</string>
    <string name="GameDetail">Game Detail</string>
    <string name="similar">BROWSE SIMILAR GAMES</string>
    <string name="liked">Add to liked games</string>
    <string name="wished">Add to wishlist</string>
    <string name="review">GAME REVIEWS</string>
    <string name="hint">Write a review...</string>
    <string name="posts">RECENT GAME UPDATES</string>
    <string name="follow">Follow</string>
    <string name="trending">Trending</string>
    <string name="toprate">Top Rated</string>
    <string name="title_activity_feed">ActivityFeedActivity</string>
    <string name="no_blog">No Blog Posts</string>
    <string name="no_review">No Blog Posts</string>

    <!--    profilePage     -->
    <string name="logout">Logout</string>
    <string name="bio">Biography</string>
    <string name="date">Join Date</string>
    <string name="f_users">FOLLOWED GAMERS</string>
    <string name="f_games">FOLLOWED GAMES</string>
    <string name="f_dev">FOLLOWED DEVELOPERS</string>
    <string name="nf_users">No followed gamers</string>
    <string name="nf_games">No followed games</string>
    <string name="nf_devs">No followed developers</string>

    <!--    devDetailPage     -->
    <string name="games_dev">GAMES DEVELOPED</string>

    <!--    gamePage     -->
    <string name="games_title">Game</string>
    <string name="developers_title">Developer</string>
    <string name="users_title">User</string>
    <string-array name="search_methods">
        <item>Game</item>
        <item>Developer</item>
        <item>User</item>
    </string-array>

    <!--    reviewPage     -->
    <string name="review_title">MAKE A REVIEW</string>
    <string name="review_body">Please describe what you liked or disliked about this game and whether you recommend it to others.</string>
    <string name="delete">Delete</string>
    <string name="deletemsg">Do you wish to delete your review?</string>

    <!--    editProfilePage     -->
    <string name="display_name">Display Name</string>
    <string name="display_url">Display Image Url</string>
</resources>