<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/pageSetup">

    <TextView
        android:id="@+id/signin_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/username_layout"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_above="@id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/buttonStyle"
        android:layout_marginTop="40dp"
        android:layout_below="@id/password_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

    <Button
        style="@style/buttonStyle"
        android:id="@+id/sign_up_button"
        android:layout_below="@id/login_button"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/copy_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/copyright"
        android:textSize="12sp" />

</RelativeLayout>
