<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GamedetailFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/line1">

                <TextView
                    android:id="@+id/activity_feed_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:text="@string/GameDetail"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/border"/>

                <ImageButton
                    android:id="@+id/mes"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/baseline_notifications_24"/>

                <ImageButton
                    android:id="@+id/profile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/baseline_person_24"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/line1"
                android:id="@+id/line2"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gamename"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/border"
                    android:layout_marginBottom="10dp"
                    android:layout_above="@id/gameimage"/>
                <ImageView
                    android:id="@+id/gameimage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/border"
                    android:layout_marginBottom="10dp"
                    android:layout_above="@id/description"/>
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/border"
                    android:layout_marginBottom="10dp"
                    android:layout_above="@id/reviews"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:text="@string/review"/>
                <ListView
                    android:id="@+id/reviews"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/border"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/line3"
                android:layout_marginTop="10dp"
                android:layout_below="@id/line2">

                <Button
                    android:id="@+id/liked"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:background="@drawable/border"
                    android:text="@string/liked"
                    android:textAllCaps="false"
                    android:textSize="10dp" />

                <Button
                    android:id="@+id/wished"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:text="@string/wished"
                    android:textSize="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/border"
                    android:layout_marginRight="10dp"/>
                <Button
                    android:id="@+id/follow"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:text="@string/follow"
                    android:textSize="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/border"
                    android:layout_marginRight="10dp"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:hint="@string/hint"
                    android:background="@drawable/border"/>
                <ImageButton
                    android:id="@+id/like_button"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_arrow_upward_24" />
                <ImageButton
                    android:id="@+id/unlike_button"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_arrow_downward_24" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_below="@id/line3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:text="@string/similar"/>
                <ListView
                    android:id="@+id/gamesecondlist"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/border"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>